--- a/game/ui/mainwindow.ui
+++ b/game/ui/mainwindow.ui
@@ -59,6 +59,9 @@
          </spacer>
         </item>
         <item>
+         <widget class="QListWidget" name="roomItems"/>
+        </item>
+        <item>
          <widget class="QLabel" name="label_4">
           <property name="text">
            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Куда идти?&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
